# firebaseAuth

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
cloudformation/: template.yml
firebase/: .firebaserc  package-lock.json
firebase/functions/: index.js  package-lock.json  package.json
src/: common.py
src/lambda/: access_denied_response.py  auth.py  create_user.py  get_user.py
src/scripts/: auth_token.py  common.py  create_user.py  get_token.py  list_users.py
tests/: base_test.py
