[tool.poetry]
name = "firebaseauth"
version = "0.1.0"
description = "Firebase proof of concept"
authors = ["Alfonso Lluch <amlluch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
firebase-admin = "^6.1.0"
types-requests = "^2.31.0.1"
types-pyyaml = "^6.0.12.10"
grpcio-status = "^1.54.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
